gglib/error.txt
src/render.c:32:3: warning: implicit declaration of function 'qtrn_rotate' is invalid in C99 [-Wimplicit-function-declaration]
                qtrn_rotate(q, f->node.rot);
                ^
src/render.c:34:18: error: member reference type 't_qtrn' (aka 'struct s_vec4t') is not a pointer; did you mean to use '.'?
                a = (t_pnt2i){q->c.x, q->c.y};
                              ~^~
                               .
src/render.c:34:20: error: no member named 'c' in 'struct s_vec4t'
                a = (t_pnt2i){q->c.x, q->c.y};
                              ~  ^
src/render.c:34:26: error: member reference type 't_qtrn' (aka 'struct s_vec4t') is not a pointer; did you mean to use '.'?
                a = (t_pnt2i){q->c.x, q->c.y};
                                      ~^~
                                       .
src/render.c:34:28: error: no member named 'c' in 'struct s_vec4t'
                a = (t_pnt2i){q->c.x, q->c.y};
                                      ~  ^
src/render.c:44:33: warning: excess elements in scalar initializer
        t_cmplx         c = (t_cmplx){{0.285, 0.01}};
                                              ^~~~
src/render.c:44:38: warning: missing field 'v' initializer [-Wmissing-field-initializers]
        t_cmplx         c = (t_cmplx){{0.285, 0.01}};
                                                   ^
src/render.c:45:29: warning: excess elements in scalar initializer
        t_cmplx         z = (t_cmplx){{0, 0}};
                                          ^
src/render.c:45:31: warning: missing field 'v' initializer [-Wmissing-field-initializers]
        t_cmplx         z = (t_cmplx){{0, 0}};
                                            ^
src/render.c:46:31: warning: excess elements in scalar initializer
        t_cmplx         op = (t_cmplx){{-2, 2}};
                                            ^
src/render.c:46:33: warning: missing field 'v' initializer [-Wmissing-field-initializers]
        t_cmplx         op = (t_cmplx){{-2, 2}};
                                              ^
src/render.c:51:6: error: no member named 'c' in 'struct s_vec2t'
                        z.c.x = ((t_real)p.x) * zoom * w->ratio / ((t_real)w->wdim.d.width) + op.c.x;
                        ~ ^
src/render.c:51:77: error: no member named 'c' in 'struct s_vec2t'
                        z.c.x = ((t_real)p.x) * zoom * w->ratio / ((t_real)w->wdim.d.width) + op.c.x;
                                                                                              ~~ ^
src/render.c:52:6: error: no member named 'c' in 'struct s_vec2t'
                        z.c.y = -((t_real)p.y) * zoom / ((t_real)w->wdim.d.height) + op.c.y;
                        ~ ^
src/render.c:52:68: error: no member named 'c' in 'struct s_vec2t'
                        z.c.y = -((t_real)p.y) * zoom / ((t_real)w->wdim.d.height) + op.c.y;
                                                                                     ~~ ^
src/render.c:56:17: error: no member named 'c' in 'struct s_vec2t'
                                ft_putnbr(z.c.x);
                                          ~ ^
src/render.c:58:17: error: no member named 'c' in 'struct s_vec2t'
                                ft_putnbr(z.c.y);
                                          ~ ^
src/render.c:62:11: warning: implicit declaration of function 'f' is invalid in C99 [-Wimplicit-function-declaration]
                        while (f(z) < );
                               ^
src/render.c:62:18: error: expected expression
                        while (f(z) < );
                                      ^
8 warnings and 11 errors generated.
make: *** [cache/render.o] Error 1
